--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
 .cpcache/
-.nrepl-port
 *.swp
-target/
+/target
+/logs
+/classes
+/checkouts
+pom.xml
+pom.xml.asc
+*.jar
+*.class
+/.lein-*
+/.nrepl-port
+/.dir-locals.el
+/profiles.clj
+/dev/resources/local.edn
+/dev/src/local.clj
+.clj-kondo/.cache
+.rebel*
